--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -440,7 +440,7 @@
     "Complete order": "Complete order",
     "Select reason": "Select reason",
     "Are You sure you would like to cancel this order?": "Are You sure you would like to cancel this order?",
-    "Something went wrong, product status cannot be updated": "Something went wrong, product status cannot be updated",
+    "Something went wrong, product status cannot be updated": "Something went wrong, product status cannot be updated"
   },
   "Payment Methods": {
     "Cash On Delivery": "Cash On Delivery",
@@ -526,14 +526,7 @@
   "Return Details": {
     "Return Details": "Return Details",
     "Items Returned": "{{count}} Item(s) Returned",
-    "Return On": "Returned On",
-    "Return_Initiated": "Return Initiated",
-    "Return_Approved": "Return Approved",
-    "Return_Picked": "Return Picked",
-    "Return_Delivered": "Return Delivered",
-    "Return_Pick_Failed": "Return Pick Failed",
-    "Return_Failed": "Return Failed",
-    "Return_Rejected": "Return Rejected"
+    "Return On": "Returned On"
   },
   "Return Summary": {
     "Items": "Items",
@@ -569,5 +562,30 @@
   },
   "Seller QR": {
     "ONDC QR se Bharat Khulega": "ONDC QR se Bharat Khulega"
+  },
+  "Fulfilment Status": {
+    "Return_Initiated": "Return Initiated",
+    "Return_Approved": "Return Approved",
+    "Return_Picked": "Return Picked",
+    "Return_Delivered": "Return Delivered",
+    "Return_Pick_Failed": "Return Pick Failed",
+    "Return_Failed": "Return Failed",
+    "Return_Rejected": "Return Rejected",
+    "Pending": "Pending",
+    "Packed" : "Packed",
+    "Agent-assigned": "Agent assigned",
+    "Out-for-pickup": "Out for pickup",
+    "Pickup-failed": "Pickup failed",
+    "Order-picked-up": "Order picked up",
+    "In-transit": "In transit",
+    "At-destination-hub": "At destination hub",
+    "Out-for-delivery": "Out for delivery",
+    "Delivery-failed": "Delivery failed",
+    "Order-delivered": "Order delivered",
+    "Cancelled": "Cancelled",
+    "RTO-Initiated": "RTO Initiated",
+    "RTO-Delivered": "RTO Delivered",
+    "RTO-Disposed": "RTO Disposed",
+    "on time": "on {{time}}"
   }
 }
