chg: show popup instead of confirming order

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -82,6 +82,11 @@
       "Cash on delivery": "কাশ অন ডেলিভারি",
       "Prepaid": "প্রিপেইড",
       "Proceed to Buy": "পরিশোধ করতে এগিয়ে যান"
+    },
+    "Reference": {
+      "reference app": "রেফারেন্স অ্যাপ",
+      "This is reference app": "এটি শুধুমাত্র একটি রেফারেন্স অ্যাপ, তাই আমরা এই মুহূর্তে অর্ডার দিতে পারি না।",
+      "ok": "ঠিক আছে।"
     }
   },
   "Cart Items": {
