--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -82,6 +82,11 @@
       "Cash on delivery": "கேஷ் ஒன் டெலிவரி",
       "Prepaid": "ப்ரீபெய்ட்",
       "Proceed to Buy": "செலுத்துவதற்கு தொடருங்கள்"
+    },
+    "Reference": {
+      "reference app": "குறிப்பு பயன்பாடு",
+      "This is reference app": "இது ஒரு குறிப்பு பயன்பாடு மட்டுமே, எனவே இந்த நேரத்தில் ஆர்டர் செய்ய முடியாது.",
+      "ok": "சரி."
     }
   },
   "Cart Items": {
