chg: on confirm pop up

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -86,7 +86,8 @@
     },
     "Reference": {
       "reference app": "রেফারেন্স অ্যাপ",
-      "This is reference app": "এটি শুধুমাত্র একটি রেফারেন্স অ্যাপ, তাই আমরা এই মুহূর্তে অর্ডার দিতে পারি না।",
+      "Reference App Message": "এটি একটি সাদা লেবেলযুক্ত রেফারেন্স অ্যাপ। অর্ডার দেওয়া যাবে না",
+      "Refer manual": "আরও বিস্তারিত জানার জন্য ব্যবহারকারীর ম্যানুয়াল দেখুন।",
       "ok": "ঠিক আছে।"
     }
   },
