--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -86,7 +86,8 @@
     },
     "Reference": {
       "reference app": "संदर्भ ऐप",
-      "This is reference app": "यह केवल एक संदर्भ ऐप है, इसलिए हम इस समय ऑर्डर नहीं दे सकते हैं।",
+      "Reference App Message": "यह एक सफेद लेबल वाला संदर्भ ऐप है। आदेश नहीं दिए जा सकते हैं।",
+      "Refer manual": "अधिक जानकारी के लिए उपयोगकर्ता पुस्तिका देखें।",
       "ok": "ठीक है।"
     }
   },
