--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -86,7 +86,8 @@
     },
     "Reference": {
       "reference app": "संदर्भ अॅप",
-      "This is reference app": "हे केवळ एक संदर्भ अॅप आहे, त्यामुळे आम्ही सध्या ऑर्डर देऊ शकत नाही.",
+      "Reference App Message": "हे व्हाईट लेबल असलेले संदर्भ अॅप आहे. ऑर्डर देता येत नाहीत",
+      "Refer manual": "अधिक तपशीलांसाठी वापरकर्ता पुस्तिका पहा",
       "ok": "ठीक आहे."
     }
   },
