--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -86,7 +86,8 @@
     },
     "Reference": {
       "reference app": "குறிப்பு பயன்பாடு",
-      "This is reference app": "இது ஒரு குறிப்பு பயன்பாடு மட்டுமே, எனவே இந்த நேரத்தில் ஆர்டர் செய்ய முடியாது.",
+      "Reference App Message": "இது வெள்ளை பெயரிடப்பட்ட குறிப்பு பயன்பாடு ஆகும். ஆர்டர்களை வைக்க முடியாது",
+      "Refer manual": "மேலும் விவரங்களுக்கு பயனர் கையேட்டைப் பார்க்கவும்",
       "ok": "சரி."
     }
   },
