--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -187,7 +187,8 @@
     "Delivered Today by": "आज {{time}} वाजेपर्यंत वितरण",
     "Delivered In": "डिलीवरी इन {{time}}",
     "Delivered by": "{{date}} द्वारा वितरित",
-    "Self pickup by": "{{time}} द्वारे स्व-उचल"
+    "Self pickup by": "{{time}} द्वारे स्व-उचल",
+    "minutes": "मिनिटे"
   },
   "Featured Categories": {
     "Featured Categories": "फिचर्ड कॅटेगरीज",
