chg: navigate to cart page after new address is created

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -148,6 +148,7 @@
     "State": "স্টেট",
     "Address Type": "ঠিকানার ধরন",
     "Save": "সংরক্ষণ",
+    "Your delivery address has been added successfully": "আপনার ডেলিভারি ঠিকানা সফলভাবে যোগ করা হয়েছে।",
     "Your delivery address has been updated successfully": "আপনার বিতরণ ঠিকানা সফলভাবে আপডেট করা হয়েছে"
   },
   "Categories": {
