--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -148,6 +148,7 @@
     "State": "State",
     "Address Type": "Address Type",
     "Save": "Save",
+    "Your delivery address has been added successfully": "Your delivery address has been added successfully",
     "Your delivery address has been updated successfully": "Your delivery address has been updated successfully"
   },
   "Categories": {
