--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -148,6 +148,7 @@
     "State": "स्टेट",
     "Address Type": "पता मुद्रलेख",
     "Save": "बचाना",
+    "Your delivery address has been added successfully": "आपका वितरण पता सफलतापूर्वक जोड़ा गया है",
     "Your delivery address has been updated successfully": "आपका डिलीवरी पता सफलतापूर्वक अपडेट कर दिया गया है"
   },
   "Categories": {
