--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -148,6 +148,7 @@
     "State": "स्टेट",
     "Address Type": "पत्त्याचा प्रकार",
     "Save": "जतन करा",
+    "Your delivery address has been added successfully": "तुमचा वितरण पत्ता यशस्वीरित्या जोडला गेला आहे",
     "Your delivery address has been updated successfully": "तुमचा वितरण पत्ता यशस्वीरित्या अपडेट केला गेला आहे"
   },
   "Categories": {
