--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -148,6 +148,7 @@
     "State": "ஸ்டேட்",
     "Address Type": "முகவரி வகை",
     "Save": "சேமிக்கவும்",
+    "Your delivery address has been added successfully": "உங்கள் டெலிவரி முகவரி வெற்றிகரமாக சேர்க்கப்பட்டுள்ளது",
     "Your delivery address has been updated successfully": "உங்கள் டெலிவரி முகவரி வெற்றிகரமாக புதுப்பிக்கப்பட்டது"
   },
   "Categories": {
