chg: translate download invoice

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -718,7 +718,8 @@
     "The maximum available quantity for item is already in your cart": "The maximum available quantity for item is already in your cart"
   },
   "Provider Details": {
-    "Order Cancelled": "Order Cancelled"
+    "Order Cancelled": "Order Cancelled",
+    "Download Invoice": "Download Invoice"
   },
   "Raise Issue": {
     "Raise an Issue": "Raise an Issue",
