--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -34,6 +34,9 @@
     "Try Saying Something, We are Listening": "कुछ कहने की कोशिश करो, हम सुन रहे हैं",
     "Search Product List": {
       "No products available": "कोई उत्पाद उपलब्ध नहीं"
+    },
+    "Search Provider List": {
+      "No providers available": "कोई प्रदाता उपलब्ध नहीं है"
     }
   },
   "List": {
@@ -805,5 +808,9 @@
     "RTO-Delivered": "आर. टी. ओ. वितरित",
     "RTO-Disposed": "आर. टी. ओ. का निपटारा",
     "on time": "{{time}}"
+  },
+  "Search": {
+    "Products": "उत्पाद",
+    "Stores": "दुकानें"
   }
 }
