--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -34,6 +34,9 @@
     "Try Saying Something, We are Listening": "ஏதாவது சொல்ல முயற்சிக்கவும், நாங்கள் கேட்கிறோம்",
     "Search Product List": {
       "No products available": "தயாரிப்புகள் எதுவும் கிடைக்கவில்லை"
+    },
+    "Search Provider List": {
+      "No providers available": "வழங்குநர்கள் இல்லை"
     }
   },
   "List": {
@@ -805,5 +808,9 @@
     "RTO-Delivered": "ஆர்டிஓ டெலிவரி செய்யப்பட்டது",
     "RTO-Disposed": "ஆர். டி. ஓ அகற்றப்பட்டது",
     "on time": "{{time}}"
+  },
+  "Search": {
+    "Products": "தயாரிப்புகள்",
+    "Stores": "கடைகள்."
   }
 }
