chg: reformat code

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -600,7 +600,9 @@
     "Cleaning & Household": "Cleaning & Household",
     "Beverages": "Beverages"
   },
-  "Store": {},
+  "Store": {
+    "km": "{{distance}} km"
+  },
   "Network Banner": {
     "You are offline, please verify your internet connection": "You are offline, please verify your internet connection"
   },
