--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -600,7 +600,9 @@
     "Cleaning & Household": "পরিচ্ছন্নতা ও গৃহস্থালী",
     "Beverages": "পানীয়"
   },
-  "Store": {},
+  "Store": {
+    "km": "{{distance}} km"
+  },
   "Network Banner": {
     "You are offline, please verify your internet connection": "আপনি অফলাইন, আপনার ইন্টারনেট সংযোগ যাচাই করুন"
   },
