--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -600,7 +600,9 @@
     "Cleaning & Household": "सफ़ाई और घरेलू",
     "Beverages": "पेय"
   },
-  "Store": {},
+  "Store": {
+    "km": "{{distance}} km"
+  },
   "Network Banner": {
     "You are offline, please verify your internet connection": "आप ऑफ़लाइन हैं, कृपया अपना इंटरनेट कनेक्शन सत्यापित करें"
   },
