--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -46,6 +46,9 @@
   "Cart": {
     "Cart": "கார்ட்",
     "My Cart": "மை கார்ட்",
+    "Items in cart": "Items in cart {{count}}",
+    "Total": "Total",
+    "View Cart": "View Cart",
     "Add More Items": "மேலும் பொருட்களைச் சேர்க்கவும்",
     "Customise": "தனிப்பயனாக்கலாம்",
     "Delivery Address": "டெலிவரி முகவரி",
