chg: FB production add to cart

--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -45,10 +45,13 @@
   },
   "Cart": {
     "Cart": "कार्ट",
+    "All Cart": "सर्व कार्ट",
     "My Cart": "माय कार्ट",
-    "Items in cart": "Items in cart {{count}}",
-    "Total": "Total",
-    "View Cart": "View Cart",
+    "Items in cart": "कार्टमधील वस्तू {{count}}",
+    "Total": "एकूण",
+    "View Cart": " कार्ट पहा",
+    "Customization for": "यासाठी सानुकूलन",
+    "Maximum allowed quantity is": " जास्तीत जास्त परवानगी असलेले प्रमाण {{count}} आहे",
     "Add More Items": "अधिक आयटम जोडा",
     "Customise": "सानुकूल करा",
     "Delivery Address": "वितरण पत्ता",
