--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -45,10 +45,13 @@
   },
   "Cart": {
     "Cart": "कार्ट",
+    "All Cart": "सभी कार्ट",
     "My Cart": "मेरा कार्ट",
-    "Items in cart": "Items in cart {{count}}",
-    "Total": "Total",
-    "View Cart": "View Cart",
+    "Items in cart": "कार्ट {{count}} में आइटम",
+    "Total": "कुल",
+    "View Cart": "कार्ट देखें",
+    "Customization for": "के लिए अनुकूलन",
+    "Maximum allowed quantity is": "अधिकतम अनुमत मात्रा {{count}} है",
     "Add More Items": "अधिक आइटम जोड़ें",
     "Customise": "अनुकूलित करें",
     "Delivery Address": "डिलिवरी का पता",
