--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -45,10 +45,13 @@
   },
   "Cart": {
     "Cart": "கார்ட்",
+    "All Cart": "அனைத்து கார்ட்டும்",
     "My Cart": "மை கார்ட்",
-    "Items in cart": "Items in cart {{count}}",
-    "Total": "Total",
-    "View Cart": "View Cart",
+    "Items in cart": "வண்டியில் உள்ள உருப்படிகள் {{count}}",
+    "Total": "மொத்தம்",
+    "View Cart": "கார்ட்டைக் காண்க",
+    "Customization for": "தனிப்பயனாக்கம்",
+    "Maximum allowed quantity is": "அனுமதிக்கப்பட்ட அதிகபட்ச அளவு {{count}}",
     "Add More Items": "மேலும் பொருட்களைச் சேர்க்கவும்",
     "Customise": "தனிப்பயனாக்கலாம்",
     "Delivery Address": "டெலிவரி முகவரி",
