add: translations related to cart

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -45,10 +45,13 @@
   },
   "Cart": {
     "Cart": "কার্ট",
+    "All Cart": "সমস্ত কার্ট",
     "My Cart": "মাই কার্ট",
-    "Items in cart": "Items in cart {{count}}",
-    "Total": "Total",
-    "View Cart": "View Cart",
+    "Items in cart": "কার্টে থাকা জিনিসগুলি {{count}}",
+    "Total": "মোট",
+    "View Cart": "কার্ট দেখুন",
+    "Customization for": "এর জন্য কাস্টমাইজেশন",
+    "Maximum allowed quantity is": "সর্বাধিক অনুমোদিত পরিমাণ হল {{count}}",
     "Add More Items": "আরো আইটেম যোগ করুন",
     "Customise": "কাস্টমাইজ করুন",
     "Delivery Address": "সরবরাহের ঠিকানা",
