--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -45,10 +45,13 @@
   },
   "Cart": {
     "Cart": "Cart",
+    "All Cart": "All Cart",
     "My Cart": "My Cart",
     "Items in cart": "Items in cart {{count}}",
     "Total": "Total",
     "View Cart": "View Cart",
+    "Customization for": "Customization for",
+    "Maximum allowed quantity is": "Maximum allowed quantity is {{count}}",
     "Add More Items": "Add More Items",
     "Customise": "Customise",
     "Delivery Address": "Delivery Address",
