--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -47,7 +47,7 @@
     "Cart": "கார்ட்",
     "All Cart": "அனைத்து கார்ட்டும்",
     "My Cart": "மை கார்ட்",
-    "Items in cart": "வண்டியில் உள்ள உருப்படிகள் {{count}}",
+    "Items in cart": "வண்டியில் உள்ள உருப்படிகள் ({{count}})",
     "Total": "மொத்தம்",
     "View Cart": "கார்ட்டைக் காண்க",
     "Customization for": "தனிப்பயனாக்கம்",
