chg: close sheet while navigating to update address

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -153,6 +153,7 @@
   },
   "Address Form": {
     "Add Address": "ঠিকানা যোগ করুন",
+    "Update Delivery Address": "ডেলিভারি ঠিকানা হালনাগাদ করুন",
     "Name": "নামে",
     "Email": "ইমেইল ঠিকানা",
     "Mobile Number": "ফোন নম্বর",
