--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -153,6 +153,7 @@
   },
   "Address Form": {
     "Add Address": "Add Address",
+    "Update Delivery Address": "Update Delivery Address",
     "Name": "Name",
     "Email": "Email Address",
     "Mobile Number": "Phone Number",
