--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -153,6 +153,7 @@
   },
   "Address Form": {
     "Add Address": "पता जोड़ें",
+    "Update Delivery Address": "डिलीवरी पता अद्यतन करें",
     "Name": "नेम",
     "Email": "ईमेल",
     "Mobile Number": "मोबाइल नंबर",
