--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -153,6 +153,7 @@
   },
   "Address Form": {
     "Add Address": "पत्ता जोडा",
+    "Update Delivery Address": "वितरण पत्ता अद्ययावत करा",
     "Name": "नामे",
     "Email": "ईमेल",
     "Mobile Number": "मोबाईल नंबर",
