--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -153,6 +153,7 @@
   },
   "Address Form": {
     "Add Address": "முகவரியைச் சேர்க்கவும்",
+    "Update Delivery Address": "டெலிவரி முகவரியைப் புதுப்பிக்கவும்",
     "Name": "நேம்",
     "Email": "மின்னஞ்சல் முகவரி",
     "Mobile Number": "தொலைபேசி எண்",
